Add third post with LaTeX rendering

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,2 @@
 <script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><a href="/custom/Dihedral3.html">Visit Custom Page</a>
+<a href="/posts/">Visit the Blog</a>
